--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <title>My First Git Project</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
-    <h1>Hello Git!</h1>
+    <h1>Hello Git!,Ini dari local</h1>
     <p>This is my first project with version control.</p>
   </body>
 </html>
